force-app/main/default/objects/pse__Forecast_Run_Info__c/pse__Forecast_Run_Info__c.object-meta.xml
<CustomObject>
    <description>For Internal Use Only. An object to input the information required for the forecast calculation run.</description>
    <label>Forecast Run Info</label>
    <nameField>
        <displayFormat>FRI-{000000}</displayFormat>
        <label>Forecast Run Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Run Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>