force-app/main/default/objects/pse__Forecast_Run_Info__c/fields/pse__Forecast_Calculation_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Calculation_Name__c</fullName>
    <label>Forecast Calculation Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>