force-app/main/default/objects/pse__Forecast_Run_Info__c/fields/pse__Time_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Period</label>
    <referenceTo>pse__Time_Period__c</referenceTo>
    <relationshipLabel>Forecast Run Info</relationshipLabel>
    <relationshipName>Forecast_Run_Info</relationshipName>
    <type>Lookup</type>
</CustomField>